Updated .gitignore, checked SCSS and app component.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700");
 @import "reset";
 @import "grid";
+@import "app";
 
 body {
   font-size: 16px;
@@ -22,9 +23,5 @@ body {
 }
 
 .ContactPage{
-
-}
-
-.AppPage {
 
 }
